--- a/index.html
+++ b/index.html
@@ -10,8 +10,27 @@
 </head>
 
 <body>
-    <main class="alllist"></main>
+    <main class="alllist">
+        <div>
+        <details>
+            <summary> Présentation </summary>
+            <dl>
+                <dd>définition</dd>
+                <dd>définition</dd>
+            </dl>
+        </details>
+        <details>
+            <summary> Présentation </summary>
+            <dl>
+                <dd>définition</dd>
+                <dd>définition</dd>
+            </dl>
+        </details>
+    </div>
+    </main>
+    <button class="add" onclick="creatlist()">+</button>
     <script src="js.js"></script>
+
 </body>
 
 </html>
