--- a/index.html
+++ b/index.html
@@ -16,26 +16,21 @@
             <div class="Logo">
                 <img src="logo.png" alt="Logo de la To Do List" height="100px">
             </div>
-            <button class="Ajouter" type="button">
+            <h1>To Do List</h1>
+
+            <button id="Ajouter" type="button">
                 +
             </button>
             <div class="couleur">
-                <button class="Couleur1">
-
-                </button>
-                <button class="Couleur2">
-
-                </button>
-                <button class="Couleur3">
-
-                </button>
-                <button class="Couleur4">
-
-                </button>
+                <div><button class="Couleur1"></button></div>
+                <div><button class="Couleur2"></button></div>
+                <div><button class="Couleur3"></button></div>
+                <div><button class="Couleur4"> </button></div>
             </div>
         </nav>
     </header>
-
+    <h1 class="titre">To Do List</h1>
 </body>
+
 
 </html>
