--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="alllist">
         
     </main>
-    <button id="Ajouter" class="add" onclick="creatlist()">+</button>
+    <button id="Ajouter"  onclick="creatlist()">+</button>
     <script src="js.js"></script>
 
 </body>
