--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+
     <link rel="shortcut icon" href="" type="image/x-icon">
     <title>To Do List</title>
 </head>
@@ -14,7 +15,7 @@
     <header>
         <nav>
             <div class="Logo">
-                <img src="logo.png" alt="Logo de la To Do List" height="100px">
+                <img src="img/logo.png" alt="Logo de la To Do List" height="100px">
             </div>
             <h1>To Do List</h1>
 
@@ -22,14 +23,15 @@
                 +
             </button>
             <div class="couleur">
-                <div><button class="Couleur1"></button></div>
-                <div><button class="Couleur2"></button></div>
-                <div><button class="Couleur3"></button></div>
-                <div><button class="Couleur4"> </button></div>
+                <div><button id="Couleur1"></button></div>
+                <div><button id="Couleur2"></button></div>
+                <div><button id="Couleur3"></button></div>
+                <div><button id="Couleur4"> </button></div>
             </div>
         </nav>
     </header>
     <h1 class="titre">To Do List</h1>
+    <script src="index.js"></script>
 </body>
 
 
