ajout du plus en bas

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </nav>
     </header>
     <h1 class="titre">To Do List</h1>
+    <button class="add" type="button">+</button>
     <script src="index.js"></script>
 </body>
 
