--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <h1 class="titre">To Do List</h1>
-    <main class="alllist">
+    <main class="alllist" name="test">
     </main>
     <button class="Ajouter" onclick="creatlist()">+</button>
     <script src="index.js"></script>
