--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="" type="image/x-icon">
     <title>To Do List</title>
 </head>
@@ -15,7 +14,7 @@
     <header>
         <nav>
             <div class="Logo">
-                <img src="img/logo.png" alt="Logo de la To Do List" height="100px">
+                <img src="img/logo.png" alt="Logo de la To Do List">
             </div>
             <h1>To Do List</h1>
 
@@ -29,8 +28,8 @@
         </nav>
     </header>
     <h1 class="titre">To Do List</h1>
-    <main class="alllist" name="test">
-    </main>
+    <main class="alllist" name="test"></main>
+
     <button class="Ajouter" onclick="creatlist()">+</button>
     <script src="index.js"></script>
     <script src="js.js"></script>
