--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="img/liste.ico" type="image/x-icon">
     <title>To Do List</title>
 </head>
 
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="Logo">
-                <img src="img/logo.png" alt="Logo de la To Do List">
+                <img src="img/logo.png" alt="Logo de la To Do List" height="100px">
             </div>
             <h1>To Do List</h1>
 
