--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="img/liste.ico" type="image/x-icon">
     <title>To Do List</title>
 </head>
@@ -31,7 +31,7 @@
     <main class="alllist" name="test"></main>
 
     <button class="Ajouter" onclick="creatlist()">+</button>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 
