--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <div><button class="color" id="Couleur2"></button></div>
                 <div><button class="color" id="Couleur3"></button></div>
                 <div><button class="color" id="Couleur4"> </button></div>
+                <div><button class="color" id="Couleur5"> </button></div>
+                <div><button class="color" id="CouleurWild"> </button></div>
+                <div><button class="color" id="CouleurSombre"> </button></div>
+                <div><button class="color" id="CouleurDef"> </button></div>
             </div>
         </nav>
     </header>
