--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
                 <img src="img/logo.png" alt="Logo de la To Do List" height="100px">
             </div>
             <h1>To Do List</h1>
-
+            <div id="clock">
+                <div id="hours"></div>
+                <div id="minutes"></div>
+                <div id="secondes"></div>
+            
+            </div>
             <button id="Ajouter" type="button" onclick="creatlist()">+</button>
             <div class="couleur">
                 <div><button class="color" id="Couleur1"></button></div>
@@ -38,8 +43,9 @@
     </header>
     <h1 class="titre">To Do List</h1>
     <main class="alllist" name="test"></main>
-
+     
     <button class="Ajouter" onclick="creatlist()">+</button>
+
     <script src="js/index.js"></script>
 </body>
 
