--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <img src="img/logo.png" alt="Logo de la To Do List" height="100px">
             </div>
             <h1>To Do List</h1>
-            <div id="clock">
-                <div id="hours"></div>
+            <div class="clock" id="clockdisplay" onload="showTime">
+                <!-- <div id="hours"></div>
                 <div id="minutes"></div>
                 <div id="secondes"></div>
-            
+                -->
             </div>
             <button id="Ajouter" type="button" onclick="creatlist()">+</button>
             <div class="couleur">
