--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
             <div class="Logo">
                 <img src="img/logo.png" alt="Logo de la To Do List" height="100px">
             </div>
+            <div id="tittleClock">
             <h1>To Do List</h1>
-            <div class="clock"   id="clockdisplay" onload="showTime()">
-               <!-- div id="hours"></div>
-                <div id="minutes"></div>
-                <div id="secondes"></div>--> 
-            
+               <div class="clock"   id="clockdisplay" onload="showTime()">
+                       <!-- div id="hours"></div>
+                      <div id="minutes"></div>
+                     <div id="secondes"></div>--> 
+        
+               </div>
             </div>
             <button id="Ajouter" type="button" onclick="creatlist()">+</button>
             <div class="couleur">
